--- a/templates/index.html
+++ b/templates/index.html
@@ -11,14 +11,18 @@
 <body>
     <h1>Quiz App</h1>
     <img src="{{ url_for('static', filename=question['image_url']) }}" alt="Question Image">
-    <form action="{{ url_for('answer') }}" method="post">
+    <form id="quizForm" action="{{ url_for('answer') }}" method="post">
         <h2>Choose the correct answer:</h2>
         {% for option in question['options'] %}
-            <input type="radio" id="{{ option }}" name="option" value="{{ option }}">
+            <input type="radio" id="{{ option }}" name="option" value="{{ option }}" onclick="submitForm()">
             <label for="{{ option }}">{{ option }}</label><br>
         {% endfor %}
         <input type="hidden" name="question_index" value="{{ question_index }}">
-        <button type="submit">Submit</button>
     </form>
+    <script>
+        function submitForm() {
+            document.getElementById("quizForm").submit();
+        }
+    </script>
 </body>
 </html>
