--- a/templates/score.html
+++ b/templates/score.html
@@ -12,5 +12,6 @@
     <h1>Quiz Score</h1>
     <p>Correct Answers: {{ scoreboard['correct'] }}/{{ scoreboard['total'] }}</p>
     <p>Score: {{ (scoreboard['correct'] / scoreboard['total']) * 100 }}%</p>
+    <a href="{{ url_for('review') }}">Review Answers</a>
 </body>
 </html>
