--- a/templates/flashNo.html
+++ b/templates/flashNo.html
@@ -69,15 +69,15 @@
 <script>
   // Define the array of card data
   const cardData = [
-    { image: 'static/img/number/1/1.jpg', text: '1' },
-    { image: 'static/img/number/2/1.jpg', text: '2' },
-    { image: 'static/img/number/3/1.jpg', text: '3' },
-    { image: 'static/img/number/4/1.jpg', text: '4' },
-    { image: 'static/img/number/5/1.jpg', text: '5' },
-    { image: 'static/img/number/6/1.jpg', text: '6' },
-    { image: 'static/img/number/7/1.jpg', text: '7' },
-    { image: 'static/img/number/8/1.jpg', text: '8' },
-    { image: 'static/img/number/9/1.jpg', text: '9' },
+    { image: 'static/images/number/1/1.jpg', text: '1' },
+    { image: 'static/images/number/2/1.jpg', text: '2' },
+    { image: 'static/images/number/3/1.jpg', text: '3' },
+    { image: 'static/images/number/4/1.jpg', text: '4' },
+    { image: 'static/images/number/5/1.jpg', text: '5' },
+    { image: 'static/images/number/6/1.jpg', text: '6' },
+    { image: 'static/images/number/7/1.jpg', text: '7' },
+    { image: 'static/images/number/8/1.jpg', text: '8' },
+    { image: 'static/images/number/9/1.jpg', text: '9' },
   ];
 
   // Shuffle function
