--- a/templates/flashAlpha.html
+++ b/templates/flashAlpha.html
@@ -69,32 +69,32 @@
 <script>
   // Define the array of card data
   const cardData = [
-    { image: 'static/img/alphabet/A/1.jpg', text: 'A' },
-    { image: 'static/img/alphabet/B/1.jpg', text: 'B' },
-    { image: 'static/img/alphabet/C/1.jpg', text: 'C' },
-    { image: 'static/img/alphabet/D/1.jpg', text: 'D' },
-    { image: 'static/img/alphabet/E/1.jpg', text: 'E' },
-    { image: 'static/img/alphabet/F/1.jpg', text: 'F' },
-    { image: 'static/img/alphabet/G/1.jpg', text: 'G' },
-    { image: 'static/img/alphabet/H/1.jpg', text: 'H' },
-    { image: 'static/img/alphabet/I/1.jpg', text: 'I' },
-    { image: 'static/img/alphabet/J/1.jpg', text: 'J' },
-    { image: 'static/img/alphabet/K/1.jpg', text: 'K' },
-    { image: 'static/img/alphabet/L/1.jpg', text: 'L' },
-    { image: 'static/img/alphabet/M/1.jpg', text: 'M' },
-    { image: 'static/img/alphabet/N/1.jpg', text: 'N' },
-    { image: 'static/img/alphabet/O/1.jpg', text: 'O' },
-    { image: 'static/img/alphabet/P/1.jpg', text: 'P' },
-    { image: 'static/img/alphabet/Q/1.jpg', text: 'Q' },
-    { image: 'static/img/alphabet/R/1.jpg', text: 'R' },
-    { image: 'static/img/alphabet/S/1.jpg', text: 'S' },
-    { image: 'static/img/alphabet/T/1.jpg', text: 'T' },
-    { image: 'static/img/alphabet/U/1.jpg', text: 'U' },
-    { image: 'static/img/alphabet/V/1.jpg', text: 'V' },
-    { image: 'static/img/alphabet/W/1.jpg', text: 'W' },
-    { image: 'static/img/alphabet/X/1.jpg', text: 'X' },
-    { image: 'static/img/alphabet/Y/1.jpg', text: 'Y' },
-    { image: 'static/img/alphabet/Z/1.jpg', text: 'Z' },
+    { image: 'static/images/alphabet/A/1.jpg', text: 'A' },
+    { image: 'static/images/alphabet/B/1.jpg', text: 'B' },
+    { image: 'static/images/alphabet/C/1.jpg', text: 'C' },
+    { image: 'static/images/alphabet/D/1.jpg', text: 'D' },
+    { image: 'static/images/alphabet/E/1.jpg', text: 'E' },
+    { image: 'static/images/alphabet/F/1.jpg', text: 'F' },
+    { image: 'static/images/alphabet/G/1.jpg', text: 'G' },
+    { image: 'static/images/alphabet/H/1.jpg', text: 'H' },
+    { image: 'static/images/alphabet/I/1.jpg', text: 'I' },
+    { image: 'static/images/alphabet/J/1.jpg', text: 'J' },
+    { image: 'static/images/alphabet/K/1.jpg', text: 'K' },
+    { image: 'static/images/alphabet/L/1.jpg', text: 'L' },
+    { image: 'static/images/alphabet/M/1.jpg', text: 'M' },
+    { image: 'static/images/alphabet/N/1.jpg', text: 'N' },
+    { image: 'static/images/alphabet/O/1.jpg', text: 'O' },
+    { image: 'static/images/alphabet/P/1.jpg', text: 'P' },
+    { image: 'static/images/alphabet/Q/1.jpg', text: 'Q' },
+    { image: 'static/images/alphabet/R/1.jpg', text: 'R' },
+    { image: 'static/images/alphabet/S/1.jpg', text: 'S' },
+    { image: 'static/images/alphabet/T/1.jpg', text: 'T' },
+    { image: 'static/images/alphabet/U/1.jpg', text: 'U' },
+    { image: 'static/images/alphabet/V/1.jpg', text: 'V' },
+    { image: 'static/images/alphabet/W/1.jpg', text: 'W' },
+    { image: 'static/images/alphabet/X/1.jpg', text: 'X' },
+    { image: 'static/images/alphabet/Y/1.jpg', text: 'Y' },
+    { image: 'static/images/alphabet/Z/1.jpg', text: 'Z' },
   ];
 
   // Shuffle function
