--- a/templates/result.html
+++ b/templates/result.html
@@ -48,7 +48,7 @@
 
     <!-- Main Section Start -->
 
-  <main>  
+  <main style="margin-top: 5%; margin-bottom: 5%;">  
     <div class="container" style="padding: 30px;padding-top: 40px; padding-bottom: 40px;">
         <h1 style="font-weight: bold;">Quiz Result</h1>
         <div class="score-container">
