--- a/templates/flashAlpha.html
+++ b/templates/flashAlpha.html
@@ -82,7 +82,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navBar">
                 <ul class="navbar-nav  ml-auto ">
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                         <a class="nav-link " href="/">Home</a>
                     </li>
                     <li class="nav-item">
