--- a/templates/home.html
+++ b/templates/home.html
@@ -1,126 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width; initial-scale=1.0">
-	<link rel="shortcut icon" type="image/x-icon" href="static/img/favicon.png">
-	<link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="static/css/main.css">
-	<link rel="stylesheet" type="text/css" href="static/css/uikit.min.css"> 
-	<link rel="stylesheet" type="text/css" href="static/css/fontawesome/css/all.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width; initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="static/img/favicon.png"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="static/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="static/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="static/css/uikit.min.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="static/css/fontawesome/css/all.css"
+    />
     <title>Quiz Home</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- Navbar Section Start -->
-	<nav class="navbar navbar-dark navbar-expand-lg"  uk-sticky="top:100; animation: uk-animation-slide-top; bottom: #sticky-on-scroll-up">
-		<div class="container">
-			<a href="index.html" class="navbar-brand">
-				<img src="static/img/logo1.png" class="img-fluid p-0" style="width: 35%; filter: brightness(0) invert(1);">
-				<div class="ml-2 p-0 d-inline webT">Signova</div>
-			</a>
-			<button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navBar">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navBar">
-				<ul class="navbar-nav  ml-auto ">
-
-					<li class="nav-item active">
-						<a class="nav-link " href="/">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/translator">Translator</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/quiz">Quiz</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/learner">Learn</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contact</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-	<!-- Nav Section End -->
-	<main style="margin-top: 6%; margin-bottom: 7%;">
-	<h1 style="text-align: center;">Choose a Quiz Category</h1>
-    <div class="quiz-categories">
+    <nav
+      class="navbar navbar-dark navbar-expand-lg"
+      uk-sticky="top:100; animation: uk-animation-slide-top; bottom: #sticky-on-scroll-up"
+    >
+      <div class="container">
+        <a href="index.html" class="navbar-brand">
+          <img
+            src="static/img/logo1.png"
+            class="img-fluid p-0"
+            style="width: 35%; filter: brightness(0) invert(1)"
+          />
+          <div class="ml-2 p-0 d-inline webT">Signova</div>
+        </a>
+        <button
+          class="navbar-toggler navbar-toggler-right"
+          data-toggle="collapse"
+          data-target="#navBar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navBar">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/translator">Translator</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/quiz">Quiz</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/learner">Learn</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- Nav Section End -->
+    <main style="margin-top: 9%; margin-bottom: 11.8%">
+      <h1 style="text-align: center">Choose a Quiz Category</h1>
+      <div class="quiz-categories">
         <div class="quiz-category">
-            <a href="{{ url_for('quiz', category='number', question_num=1) }}">
-                <img src="static\qhome\numbers.png" alt="Number Quiz">
-            </a>
+          <a href="{{ url_for('quiz', category='number', question_num=1) }}">
+            <img src="static\qhome\numbers.png" alt="Number Quiz" />
+          </a>
         </div>
         <div class="quiz-category">
-            <a href="{{ url_for('quiz', category='alphabet', question_num=1) }}">
-                <img src="static\qhome\alphabet.png" alt="Alphabet Quiz">
-            </a>
+          <a href="{{ url_for('quiz', category='alphabet', question_num=1) }}">
+            <img src="static\qhome\alphabet.png" alt="Alphabet Quiz" />
+          </a>
         </div>
         <!-- Add more categories as needed -->
-    </div>
-	<style>
+      </div>
+      <style>
         .quiz-categories {
-            list-style-type: none; /* Remove bullets from the list */
-            display: flex; /* Display items inline */
-            justify-content: center;
-            padding: 20px;
+          list-style-type: none; /* Remove bullets from the list */
+          display: flex; /* Display items inline */
+          justify-content: center;
+          padding: 20px;
         }
 
         .quiz-category {
-            margin-right: 20px; /* Add margin between categories */
+          margin-right: 20px; /* Add margin between categories */
         }
 
         .quiz-category img {
-            width: 200px; /* Set the width of the images */
-            height: auto; /* Maintain aspect ratio */
-            transition: filter 0.3s ease; /* Smooth transition for hover effect */
+          width: 200px; /* Set the width of the images */
+          height: auto; /* Maintain aspect ratio */
+          transition: filter 0.3s ease; /* Smooth transition for hover effect */
         }
 
         .quiz-category img:hover {
-            filter: brightness(80%); /* Darken the image on hover */
+          filter: brightness(80%); /* Darken the image on hover */
         }
-    </style>
-	</main>
-	
+      </style>
+    </main>
 
-	<!-- Footer Section Start -->
-	<footer id="footer" class="py-3 text-center text-light">
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<h2 class="display-5 mb-0 text-light">Signova</h2>
-					<div class="d-flex flex-row justify-content-center p-3">
-						<div class="px-5">
-							<a href="#">
-								<i class="fab fa-facebook-f"></i>
-							</a>
-						</div>
-						<div class="px-5">
-							<a href="#">
-								<i class="fab fa-linkedin-in"></i>
-							</a>
-						</div>
-						<div class="px-5">
-							<a href="#">
-								<i class="fab fa-twitter"></i>
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<!-- <div class="col">
+    <!-- Footer Section Start -->
+    <footer id="footer" class="py-3 text-center text-light">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h2 class="display-5 mb-0 text-light">Signova</h2>
+            <div class="d-flex flex-row justify-content-center p-3">
+              <div class="px-5">
+                <a href="#">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+              </div>
+              <div class="px-5">
+                <a href="#">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </div>
+              <div class="px-5">
+                <a href="#">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <!-- <div class="col">
 					Glozzome.com © 2019 All Rights Reserved by MrhRifat
 				</div> -->
-			</div>
-		</div>
-	</footer>
-	<script type="text/javascript" src="static/js/jquery-slim.min.js"></script>
-	<script type="text/javascript" src="static/js/popper.min.js"></script>
-	<script type="text/javascript" src="static/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="static/js/uikit.min.js"></script>
-	<script type="text/javascript" src="static/js/uikit-icons.min.js"></script>
-</body>
+        </div>
+      </div>
+    </footer>
+    <script type="text/javascript" src="static/js/jquery-slim.min.js"></script>
+    <script type="text/javascript" src="static/js/popper.min.js"></script>
+    <script type="text/javascript" src="static/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="static/js/uikit.min.js"></script>
+    <script type="text/javascript" src="static/js/uikit-icons.min.js"></script>
+  </body>
 </html>
