--- a/templates/index.html
+++ b/templates/index.html
@@ -116,58 +116,58 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col">
-					<h2 class="mb-0">Photo Gallery</h2>
-					<p class="lead m-0">Click to check out our photos</p>
+					<h2 class="mb-0">Sign Gallery</h2>
+					<p class="lead m-0">Click to check out predicted signs</p>
 				</div>
 			</div>
 			<div class="row mt-3">
 				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="static/img/gallery1.jpg">
-						<img src="static/img/gallery1.jpg" class="img-fluid">
+					<a href="static/img/WhatsApp Image 2024-04-03 at 8.12.12 AM (1).jpeg">
+						<img src="static/img/WhatsApp Image 2024-04-03 at 8.12.12 AM (1).jpeg" class="img-fluid">
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="static/img/gallery2.jpg">
-						<img src="static/img/gallery2.jpg" class="img-fluid">
+					<a href="static/img/WhatsApp Image 2024-04-03 at 8.12.13 AM.jpeg">
+						<img src="static\img\WhatsApp Image 2024-04-03 at 8.12.13 AM.jpeg" class="img-fluid">
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="static/img/gallery3.jpg">
-						<img src="static/img/gallery3.jpg" class="img-fluid">
-					</a>
-				</div>
-			</div>
-			<div class="row mt-3">
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="static/img/gallery4.jpg">
-						<img src="static/img/gallery4.jpg" class="img-fluid">
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="static/img/gallery5.jpg">
-						<img src="static/img/gallery5.jpg" class="img-fluid">
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="static/img/gallery6.jpg">
-						<img src="static/img/gallery6.jpg" class="img-fluid">
+					<a href="static/img/WhatsApp Image 2024-04-03 at 8.12.14 AM.jpeg">
+						<img src="static/img/WhatsApp Image 2024-04-03 at 8.12.14 AM.jpeg" class="img-fluid">
 					</a>
 				</div>
 			</div>
 			<div class="row mt-3">
 				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="static/img/gallery7.jpg">
-						<img src="static/img/gallery7.jpg" class="img-fluid">
+					<a href="static/img/WhatsApp Image 2024-04-03 at 8.12.16 AM (1).jpeg">
+						<img src="static/img/WhatsApp Image 2024-04-03 at 8.12.16 AM (1).jpeg" class="img-fluid">
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="static/img/gallery8.jpg">
-						<img src="static/img/gallery8.jpg" class="img-fluid">
+					<a href="static/img/WhatsApp Image 2024-04-03 at 8.12.17 AM (1).jpeg">
+						<img src="static/img/WhatsApp Image 2024-04-03 at 8.12.17 AM (1).jpeg" class="img-fluid">
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="static/img/gallery9.jpg">
-						<img src="static/img/gallery9.jpg" class="img-fluid">
+					<a href="static/img/WhatsApp Image 2024-04-03 at 8.12.17 AM.jpeg">
+						<img src="static/img/WhatsApp Image 2024-04-03 at 8.12.17 AM.jpeg" class="img-fluid">
+					</a>
+				</div>
+			</div>
+			<div class="row mt-3">
+				<div class="col-lg-4 col-md-4 col-sm-4">
+					<a href="static/img/WhatsApp Image 2024-04-03 at 8.12.15 AM (1).jpeg">
+						<img src="static/img/WhatsApp Image 2024-04-03 at 8.12.15 AM (1).jpeg" class="img-fluid">
+					</a>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-4">
+					<a href="static/img/WhatsApp Image 2024-04-03 at 8.12.15 AM.jpeg">
+						<img src="static/img/WhatsApp Image 2024-04-03 at 8.12.15 AM.jpeg" class="img-fluid">
+					</a>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-4">
+					<a href="static/img/WhatsApp Image 2024-04-03 at 8.12.12 AM.jpeg">
+						<img src="static/img/WhatsApp Image 2024-04-03 at 8.12.12 AM.jpeg" class="img-fluid">
 					</a>
 				</div>
 			</div>
