--- a/templates/learner.html
+++ b/templates/learner.html
@@ -1,129 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width; initial-scale=1.0">
-	<link rel="shortcut icon" type="image/x-icon" href="static/img/favicon.png">
-	<link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="static/css/main.css">
-	<link rel="stylesheet" type="text/css" href="static/css/uikit.min.css"> 
-	<link rel="stylesheet" type="text/css" href="static/css/fontawesome/css/all.css">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width; initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="static/img/favicon.png"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="static/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="static/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="static/css/uikit.min.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="static/css/fontawesome/css/all.css"
+    />
     <style>
-        body {
-          font-family: Arial, sans-serif;
-          margin: 0;
-          padding: 20px;
-          text-align: center;
-        }
-      
-        h1 {
-          margin-bottom: 20px;
-        }
-      
-        .options {
-          display: flex;
-          justify-content: center;
-        }
-      
-        .options button {
-          margin: 0 10px;
-          padding: 10px 20px;
-          font-size: 16px;
-          cursor: pointer;
-        }
-      </style>
-	<title>Signova</title>
-</head>
-<body>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 20px;
+        text-align: center;
+      }
+
+      h1 {
+        margin-bottom: 20px;
+      }
+
+      .options {
+        display: flex;
+        justify-content: center;
+      }
+
+      .options button {
+        margin: 0 10px;
+        padding: 10px 20px;
+        font-size: 16px;
+        cursor: pointer;
+      }
+    </style>
+    <title>Signova</title>
+  </head>
+  <body>
     <!-- Navbar Section Start -->
-    <nav class="navbar navbar-dark navbar-expand-lg" uk-sticky="top:100; animation: uk-animation-slide-top; bottom: #sticky-on-scroll-up">
-        <div class="container">
-            <a href="index.html" class="navbar-brand">
-                <img src="static/img/logo1.png" class="img-fluid p-0" style="width: 35%; filter: brightness(0) invert(1);">
-                <div class="ml-2 p-0 d-inline webT">Signova</div>
-            </a>
-            <button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navBar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navBar">
-                <ul class="navbar-nav  ml-auto ">
-                    <li class="nav-item active">
-                        <a class="nav-link " href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/translator">Translator</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/quiz">Quiz</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/learner">Learn</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
+    <nav
+      class="navbar navbar-dark navbar-expand-lg"
+      uk-sticky="top:100; animation: uk-animation-slide-top; bottom: #sticky-on-scroll-up"
+    >
+      <div class="container">
+        <a href="index.html" class="navbar-brand">
+          <img
+            src="static/img/logo1.png"
+            class="img-fluid p-0"
+            style="width: 35%; filter: brightness(0) invert(1)"
+          />
+          <div class="ml-2 p-0 d-inline webT">Signova</div>
+        </a>
+        <button
+          class="navbar-toggler navbar-toggler-right"
+          data-toggle="collapse"
+          data-target="#navBar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navBar">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/translator">Translator</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/quiz">Quiz</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/learner">Learn</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
     <!-- About Section Start -->
     <section id="about" class="text-center py-5 text-light">
-        <div class="inner-overlay">
-            <div class="container">
-                <div class="row">
-                    <div class="col mt-5 pt-4">
-                        <h1 class="text-light">Learn</h1 >
-                        <p class="lead">
-                            Let's Learn the sign langauge 
-                        </p>
-                    </div>
-                </div>
+      <div class="inner-overlay">
+        <div class="container">
+          <div class="row">
+            <div class="col mt-5 pt-4">
+              <h1 class="text-light">Learn</h1>
+              <p class="lead">Let's Learn the sign langauge</p>
             </div>
+          </div>
         </div>
+      </div>
     </section>
     <!-- About Section End -->
     <!-- Flash card -->
     <body>
+    <main style="margin-bottom: 10%; margin-top: 5%;">   
+      <h1>Choose a Category:</h1>
 
-        <h1>Choose a Category:</h1>
-        
-        <div class="options">
-          <form action="/flashcards" method="post">
-            <button type="submit" name="choice" value="numbers">Numbers</button>
-            <button type="submit" name="choice" value="alphabets">Alphabets</button>
-          </form>
-        </div>
-        <div></div>
-        </body>
+      <div class="options">
+        <form action="/flashcards" method="post">
+          <button type="submit" name="choice" value="numbers">Numbers</button>
+          <button type="submit" name="choice" value="alphabets">
+            Alphabets
+          </button>
+        </form>
+      </div>
+      <div>
+    </main> 
+    </body>
 
-   
     <!-- Footer Section Start -->
     <footer id="footer" class="py-3 text-center text-light">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h2 class="display-5 mb-0 text-light">Signova</h2>
-                    <div class="d-flex flex-row justify-content-center p-3">
-                        <div class="px-5">
-                            <a href="#">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                        </div>
-                        <div class="px-5">
-                            <a href="#">
-                                <i class="fab fa-linkedin-in"></i>
-                            </a>
-                        </div>
-                        <div class="px-5">
-                            <a href="#">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h2 class="display-5 mb-0 text-light">Signova</h2>
+            <div class="d-flex flex-row justify-content-center p-3">
+              <div class="px-5">
+                <a href="#">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+              </div>
+              <div class="px-5">
+                <a href="#">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </div>
+              <div class="px-5">
+                <a href="#">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </footer>
 
     <script type="text/javascript" src="static/js/jquery-slim.min.js"></script>
@@ -132,5 +154,5 @@
     <script type="text/javascript" src="static/js/uikit.min.js"></script>
     <script type="text/javascript" src="static/js/uikit-icons.min.js"></script>
     <script src="static\js\script.js"></script>
-</body>
+  </body>
 </html>
